--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:background="@android:color/transparent"
-        android:contentDescription="Zgłoś awarię"
+        android:contentDescription="@string/report_problem"
         android:src="@android:drawable/ic_menu_edit" />
 
     <ImageButton
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:contentDescription="Zeskanuj kod QR"
+        android:contentDescription="@string/scan_qr"
         android:src="@android:drawable/ic_menu_camera" />
 
 </LinearLayout>
