--- a/app/src/main/res/layout/activity_report_issue.xml
+++ b/app/src/main/res/layout/activity_report_issue.xml
@@ -8,19 +8,19 @@
         android:id="@+id/textViewDeviceInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Informacje o urządzeniu"
+        android:text="@string/device_info"
         android:padding="8dp" />
 
     <EditText
         android:id="@+id/editTextDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Opisz awarię"/>
+        android:hint="@string/describe_error"/>
 
     <Button
         android:id="@+id/buttonSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Zgłoś"
+        android:text="@string/report"
         android:layout_marginTop="16dp"/>
 </LinearLayout>
