--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -177,6 +177,21 @@
                 app:layout_constraintTop_toBottomOf="@id/password_container" />
 
             <TextView
+                android:id="@+id/login_error_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="#FF4444"
+                android:textSize="14sp"
+                android:visibility="gone"
+                android:text="@string/wrong_login_or_password"
+                app:layout_constraintTop_toBottomOf="@id/password_container"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp"
+                android:textAlignment="center" />
+
+
+            <TextView
                 android:id="@+id/forgot_password_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
