--- a/app/src/main/res/layout/activity_edit_ticket.xml
+++ b/app/src/main/res/layout/activity_edit_ticket.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,52 +9,67 @@
         android:id="@+id/background_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/background"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="@null"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- edycja tytułu -->
     <EditText
         android:id="@+id/edit_ticket_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Tytuł zgłoszenia"
-        android:padding="16dp"
-        android:background="@drawable/input_background"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="24dp"
-        android:layout_marginTop="100dp" />
+        android:layout_marginTop="100dp"
+        android:background="@drawable/input_background"
+        android:hint="@string/tytu_zg_oszenia"
+        android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- edycja opisu -->
     <EditText
         android:id="@+id/edit_ticket_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Opis zgłoszenia"
-        android:padding="16dp"
-        android:background="@drawable/input_background"
-        app:layout_constraintTop_toBottomOf="@id/edit_ticket_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="24dp"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:background="@drawable/input_background"
+        android:hint="@string/opis_zg_oszenia"
+        android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit_ticket_title" />
+
+    <!-- spinner statusu -->
+    <Spinner
+        android:id="@+id/spinner_status"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/input_background"
+        android:padding="12dp"
+        android:spinnerMode="dropdown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit_ticket_description" />
 
     <!-- przycisk ZAPISZ -->
     <Button
         android:id="@+id/button_save_changes"
+        style="@style/MyButtonPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Zapisz zmiany"
-        style="@style/MyButtonPrimary"
-        app:layout_constraintTop_toBottomOf="@id/edit_ticket_description"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="32dp"
+        android:text="@string/zapisz_zmiany"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/spinner_status" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
