--- a/app/src/main/res/layout/activity_report_detail.xml
+++ b/app/src/main/res/layout/activity_report_detail.xml
@@ -1,20 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:padding="24dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="24dp"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textViewFullDescription"
-        android:layout_width="match_parent"
+        android:id="@+id/report_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textViewFullDate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:textSize="16sp" />
+        android:text="Szczegóły zgłoszenia"
+        android:textSize="20sp"/>
 </LinearLayout>
+
