--- a/app/src/main/res/layout/activity_edit_ticket.xml
+++ b/app/src/main/res/layout/activity_edit_ticket.xml
@@ -25,7 +25,7 @@
         android:layout_margin="24dp"
         android:layout_marginTop="100dp"
         android:background="@drawable/input_background"
-        android:hint="@string/tytu_zg_oszenia"
+        android:hint="@string/report_title"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +39,7 @@
         android:layout_margin="24dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/input_background"
-        android:hint="@string/opis_zg_oszenia"
+        android:hint="@string/report_description"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="@string/zapisz_zmiany"
+        android:text="@string/save_changes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/spinner_status" />
