--- a/app/src/main/res/layout/item_report.xml
+++ b/app/src/main/res/layout/item_report.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_container"
     android:background="@drawable/rounded_background"
     android:layout_width="match_parent"
@@ -20,22 +21,22 @@
         android:paddingEnd="8dp">
 
 
-    <TextView
-        android:id="@+id/textViewDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Opis zgłoszenia"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="#FFFFFF"
-        android:paddingBottom="4dp"/>
+        <TextView
+            android:id="@+id/textViewDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/opis_zg_oszenia"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:paddingBottom="4dp" />
 
 
         <TextView
             android:id="@+id/textViewTechnician"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Technik:"
+            android:text="@string/technik"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
@@ -45,7 +46,7 @@
             android:id="@+id/textViewStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Status:"
+            android:text="@string/status"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="#444444"
@@ -55,7 +56,7 @@
             android:id="@+id/textViewDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Data:"
+            android:text="@string/data"
             android:textSize="12sp"
             android:textColor="#888888" />
     </LinearLayout>
@@ -64,9 +65,9 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/arrow_right"
-        android:tint="#888888"
-        android:contentDescription="Przejdź do szczegółów"
-        android:layout_marginStart="8dp"/>
+        android:contentDescription="@string/przejd_do_szczeg_w"
+        android:layout_marginStart="8dp"
+        app:tint="#888888" />
 </LinearLayout>
 
 
