--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -48,7 +48,7 @@
                 android:id="@+id/tv_detail_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Wprowadź dane do rejestracji:"
+                android:text="@string/register_data"
                 android:textColor="#212121"
                 android:textSize="22sp"
                 android:textStyle="bold"
@@ -60,7 +60,7 @@
                 android:id="@+id/email_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="E-mail"
+                android:hint="@string/e_mail"
                 android:inputType="textEmailAddress"
                 android:padding="12dp"
                 android:backgroundTint="#4D5A88D1"
@@ -70,7 +70,7 @@
                 android:id="@+id/password_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Hasło"
+                android:hint="@string/pass_word"
                 android:inputType="textPassword"
                 android:padding="12dp"
                 android:backgroundTint="#4D5A88D1"
@@ -80,7 +80,7 @@
                 android:id="@+id/confirm_password_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Potwierdź hasło"
+                android:hint="@string/confirm_password"
                 android:inputType="textPassword"
                 android:padding="12dp"
                 android:backgroundTint="#4D5A88D1"
@@ -90,7 +90,7 @@
                 android:id="@+id/register_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Zarejestruj się"
+                android:text="@string/register"
                 android:backgroundTint="@color/material_dynamic_primary20"
                 android:textColor="@android:color/white"
                 android:paddingTop="12dp"
