--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -42,7 +42,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Resetuj hasło"
+                android:text="@string/reset_password"
                 android:textColor="#212121"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -53,7 +53,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Wpisz swój e-mail"
+                android:hint="@string/type_email"
                 android:layout_marginBottom="16dp"
                 app:boxBackgroundMode="filled"
                 app:boxBackgroundColor="@android:color/white"
@@ -74,7 +74,7 @@
                 android:id="@+id/resetPasswordButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Wyślij link resetujący hasło"
+                android:text="@string/reset_password_link"
                 android:textColor="@android:color/white"
                 android:backgroundTint="@color/material_dynamic_primary20"
                 android:layout_marginTop="8dp"
