--- a/app/src/main/res/layout/item_report.xml
+++ b/app/src/main/res/layout/item_report.xml
@@ -25,7 +25,7 @@
             android:id="@+id/textViewDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/opis_zg_oszenia"
+            android:text="@string/report_description"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
@@ -36,7 +36,7 @@
             android:id="@+id/textViewTechnician"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/technik"
+            android:text="@string/technician"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
@@ -65,7 +65,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/arrow_right"
-        android:contentDescription="@string/przejd_do_szczeg_w"
+        android:contentDescription="@string/go_to_details"
         android:layout_marginStart="8dp"
         app:tint="#888888" />
 </LinearLayout>
